[gd_scene load_steps=2 format=3 uid="uid://ct578uf4s3vlp"]

[ext_resource type="Script" path="res://src/ui/ability_upgrade_card.gd" id="1_smwqr"]

[node name="AbilityUpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(120, 150)
script = ExtResource("1_smwqr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Description description description"
autowrap_mode = 2
